--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practica 01</title>
+    <title>Practica 01 | Algoritmo de Chaikin</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:600|Handlee&display=swap" rel="stylesheet">
   </head>
@@ -14,7 +14,7 @@
         <canvas id="the_canvas" width="800" height="500"></canvas>
       </div>
       <div class="name-container">
-          <h2>Amaya López Dulce Fernanda  |  314195856</h2> 
+          <h2>Amaya López Dulce Fernanda  |  314195856</h2>
       </div>
     </div>
     <script type="text/javascript" src="js/Main.js"></script>
